--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ anyhow = "1"
 regex = "1.11"
 indexmap = "2.11"
 bstr = "1.12"
+saphyr = "0.0.6"
+bimap = "0.6"
 
 [profile.release]
 overflow-checks = true
